--- a/styles.css
+++ b/styles.css
@@ -38,4 +38,52 @@ img {
   max-width: 900px;
   margin: 0 auto;
   padding: 0 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.counter-div {
+  width: 40rem;
+  border: 1px solid --grey;
+  padding: 1rem;
+  background-color: rgb(235, 136, 69);
+  color: var(--white);
+  text-align: center;
+  border-radius: 5px;
+}
+
+.counter-div > * {
+  margin-bottom: 2rem;
+}
+
+.count {
+  font-size: 4rem;
+}
+
+.buttons button {
+  padding: 1rem;
+  margin: 0 1rem;
+  font-size: 1.5rem;
+  color: var(--white);
+  border: none;
+  outline: none;
+  border-radius: 3px;
+  cursor: pointer;
+}
+
+.buttons button:hover {
+  background-color: var(--white);
+  color: var(--dark-grey);
+}
+
+button.subtract {
+  background-color: var(--dark-grey);
+}
+button.reset {
+  background-color: var(--dark-grey);
+}
+button.add {
+  background-color: var(--dark-grey);
 }
